--- a/academics_admissions/admission_eligibility.html
+++ b/academics_admissions/admission_eligibility.html
@@ -179,7 +179,7 @@
       <div class="row">
         <div class="col-lg-12">
           <!-- <h6>Get all details</h6> -->
-          <h2>Admission Eligibility</h2>
+          <h2>Admission Eligibility & Prospectus</h2>
           
         </div>
       </div>
@@ -213,6 +213,21 @@
 
                     </p>
 
+                    <p>
+                      <h4 class="block-dept">Prospectus</h4><br/>
+
+                      <a href="../assets/files/prospectus/Prosp 2019-20.pdf" target="_blank">→ Prospectus 2019-20</a><br><br>
+
+                      <a href="../assets/files/prospectus/Prosp-2020-21.pdf" target="_blank">→ Prospectus 2020-21</a><br><br>
+
+                      <a href="../assets/files/prospectus/Prosp-2022-23.pdf" target="_blank">→ Prospectus 2022-23</a><br><br>
+
+                      <a href="../assets/files/prospectus/Prosp 2023-24.pdf" target="_blank">→ Prospectus 2023-24</a><br><br>
+
+                      <a href="../assets/files/prospectus/Prosp 2024-25.pdf" target="_blank">→ Prospectus 2024-25</a><br><br>
+
+
+                    </p>
                     
                     </div>
                     <div class="right-body">
