--- a/index.html
+++ b/index.html
@@ -229,25 +229,23 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                         <li>
-                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/robotics.pdf" target="_blank">
-                              Robotics Championship- 2024 by Pushpa Gujral Science City
-                           </a>
-                         </li>
-                     <li>
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.net/news/Academic_calender_2024-25.PDF" target="_blank">Academic Calendar (Even Semester) 2024-25</a>
+                          </li>
+                     <!-- <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://eakadamik.com/psbte_2024/" target="_blank">
                           PSBTE Registration for Admissions (2024-25) to Diploma Courses
                        </a>
-                     </li>
-                     <li>
+                     </li> -->
+                     <!-- <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://forms.gle/YQnNZjtLGbXK5Ajr7/" target="_blank">
                         Inquiry Proforma for Admissions (2024-25) to Diploma Courses
                      </a>
-                   </li>
-                     <li>
+                   </li> -->
+                     <!-- <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://scholarships.gov.in/" target="_blank">
                         National Scholarship Portal is open for application submission for AY 2024-25
                      </a>
-                   </li>
+                   </li> -->
 
                      <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/latest_news/DEPARTMENT-OF-TECHNICAL-EDUCATION-INDUSTRIAL-TRAINING.pdf" target="_blank">
@@ -260,16 +258,7 @@ https://templatemo.com/tm-569-edu-meeting
                           Rent Contract of Canteen Cum TuckShop for Year 2023-24
                        </a>
                      </li> -->
-                      <!-- <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://eakadamik.in/psbte_2023/" target="_blank">
-                            Admissions 2023-24
-                          </a>
-                        </li>
-                      <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://forms.gle/srv9j81v1mLuXVwj6" target="_blank">
-                            Enquiry Proforma for Admissions 2023-24
-                          </a>
-                        </li> -->
+
                     <!-- <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/letter-APF-May2023.PDF" target="_blank">
                           Regarding End Semester Examination May 2023
@@ -295,9 +284,7 @@ https://templatemo.com/tm-569-edu-meeting
                           Direct Counseling (Engineering Courses)- Admissions 2022-23
                         </a>
                       </li>-->
-                      <!-- <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Academic-Cal_Jan23.PDF" target="_blank">Academic Calendar (Even Semester) 2022-23</a>
-                      </li> -->
+                      <!--  -->
 
                       <!--<li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.com/" target="_blank">
