--- a/index.html
+++ b/index.html
@@ -1120,24 +1120,41 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="item">
                 <h3>Admission for Diploma In Engg. & Architecture Trades</h3>
-                <p>Admissions for Session 2024-25 for Diploma in Engg. & Architecture Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education. Kindly click below to register.</p>
+                <p>Admissions for Session 2025-26 for Diploma in Engg. & Architecture Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education. Kindly click below to view the updates.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Register Now</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Read More</a></div>
               </div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="item">
                 <h3>Admission for D. Pharmacy</h3>
-                <p>Admissions for Session 2024-25 for Diploma in Pharmacy Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education. Kindly click below to register.</p>
+                <p>Admissions for Session 2025-26 for Diploma in Pharmacy Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education. Kindly click below to view the updates.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Register Now</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Read More</a></div>
               </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
+            <div class="meeting-item">
+                <div class="heading-right-sidebar">
+                  <b>PMS Nodal Officer</b>
+                </div>
+
+                <div class="right-sidebar-intro" style="border-bottom-right-radius: 20px;border-bottom-left-radius:20px">
+                 <div class="row">
+                  <div style="text-align: justify;font-size:16px;">
+
+                    Dr. Rupinder Singh Chahal (Sen. Lect.) <br>
+                    Contact: 93169-06633 <br>
+                    Email: <a href="mailto:rupinder.chahal@punjab.gov.in">rupinder.chahal@punjab.gov.in</a>
+                    <br><br>
+                  </div>
+                 </div>
+                </div>
+              </div>
           <div class="heading-right-sidebar">
             Scholarships Offered
           </div>
